univention-directory-notifier (12.0.1-3) unstable; urgency=low

  * Bug #41687: Security audit code
  * Bug #48427: Implement Univention Directory Notifier protocol version 3
  * Bug #48466: Use non-blocking sockets to prevent denial-of-service attack
  * Bug #48467: Switch from select() to epoll() to prevent DoS attack

 -- Philipp Hahn <hahn@univention.de>  Thu, 10 Jan 2019 12:47:47 +0100

univention-directory-notifier (12.0.1-2) unstable; urgency=medium

  * Bug #46312: increase runsv timeout to 30 seconds

 -- Jürn Brodersen <brodersen@univention.de>  Wed, 21 Feb 2018 15:16:46 +0100

univention-directory-notifier (12.0.1-1) unstable; urgency=medium

  * Use service instead of invoke-rc.d since systemd policy layer
    prevents starting services in a chroot environment (Bug #45905)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 19 Dec 2017 22:18:04 +0100

univention-directory-notifier (12.0.0-1) unstable; urgency=medium

  * Bug #45841: UCS-4.3 version bump

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 11 Dec 2017 14:40:23 +0100

univention-directory-notifier (11.0.0-4) unstable; urgency=low

  * Bug #43470: Revert ucs-4.2-0@77762

 -- Philipp Hahn <hahn@univention.de>  Thu, 16 Mar 2017 06:00:07 +0100

univention-directory-notifier (11.0.0-3) unstable; urgency=low

  * Bug #43470: Handle UCRV */autostart through systemd

 -- Philipp Hahn <hahn@univention.de>  Wed, 15 Mar 2017 08:52:56 +0100

univention-directory-notifier (11.0.0-2) unstable; urgency=low

  * Bug #38438: Fix message printing in init-script

 -- Philipp Hahn <hahn@univention.de>  Tue, 13 Sep 2016 09:58:29 +0200

univention-directory-notifier (11.0.0-1) unstable; urgency=medium

  * Bug #41963: UCS-4.2 version bump
  * Bug #38438: Make init-script LSB compliant

 -- Philipp Hahn <hahn@univention.de>  Fri, 12 Aug 2016 13:56:27 +0200

univention-directory-notifier (10.0.1-1) unstable; urgency=medium

  * Bump version for UCS 4.1 (Bug #39729)
